[project]
name = "fastapi-crud-demo"
version = "1.0.0"
description = "A simple CRUD API with FastAPI, SQLAlchemy, and JOIN operations"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "email-validator>=2.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "keyboard>=0.13.5",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
]
requires-python = ">=3.8"
license = {text = "MIT"}


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]


[project.scripts]
dev = "tasks:dev"